fixed text alignment in media body

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -271,3 +271,7 @@ h5{
     margin: 1em;
 }
 
+.media-body>h5 {
+    text-align: left;
+}
+
